# aem

./: .gitattributes  CMakeLists.txt  readme.md
converter/: CMakeLists.txt  animation.c  animation.h  config.h  converter.c  geometry.c  geometry.h  header.c  header.h  joint.c  joint.h  material.c  material.h  texture.c  texture.h  transform.c  transform.h
converter/animation_module/: analyzer_node.c  analyzer_node.h  analyzer_node_printer.c  analyzer_node_printer.h  animation.c  animation.h  animation_module.c  animation_module.h  animation_processor.c  animation_processor.h  animation_sampler.c  animation_sampler.h  joint.c  joint.h  joint_printer.c  joint_printer.h  joint_processor.c  joint_processor.h  keyframe.c  keyframe.h  keyframe_processor.c  keyframe_processor.h  node_analyzer.c  node_inspector.c  node_inspector.h  node_printer.c
converter/geometry_module/: geometry_module.c  geometry_module.h  mesh_inspector.c  mesh_inspector.h  output_mesh.c  output_mesh.h  tangent_constructor.c  tangent_constructor.h  tangent_generator.c  tangent_generator.h
converter/material_module/: material_inspector.c  material_inspector.h  material_module.c  material_module.h  output_texture.c  output_texture.h  render_material.c  render_material.h  render_texture.c  render_texture.h  texture_compressor.c  texture_compressor.h  texture_processor.c  texture_processor.h  texture_transform.c  texture_transform.h
converter/shaders/: texture.frag.glsl  texture.vert.glsl
exporter/: CMakeLists.txt  animation.c  animation.h  config.h  exporter.c  new_animation.c  new_animation.h  texture.c  texture.h
libaem/: CMakeLists.txt  animation.c  common.h  core.c  model.c  texture.c
libaem/include/aem/: aem.h  animation_mixer.h  model.h
showcase/: CMakeLists.txt  camera.c  camera.h  collision.c  collision.h  debug_pipeline.c  debug_renderer.c  debug_renderer.h  enemy.c  enemy.h  enemy_state.h  enemy_state_aim.c  enemy_state_aim.h  enemy_state_die.c  enemy_state_die.h  enemy_state_fire.c  enemy_state_fire.h  enemy_state_flinch.c  enemy_state_flinch.h  enemy_state_walk.c  enemy_state_walk.h  forward_pipeline.c  forward_pipeline.h  hud.c  hud.h  hud_damage_indicator.c  input.c  input.h  map.c  map.h  model_manager.c  model_manager.h  model_renderer.h  particle_manager.c  particle_pipeline.c  particle_pipeline.h  particle_renderer.c  particle_renderer.h  player.c  player.h  (+20 more)
showcase/models/: ak.aem  car.aem  car_c.aem  cz.aem  soldier.aem  sponza_base.aem  sponza_c.aem  sponza_curtains.aem  sponza_ivy.aem  sponza_single_b1.aem  sponza_single_b2.aem  sponza_single_b3.aem  sponza_single_c.aem  sponza_tree.aem  test_level.aem  tracer.aem
showcase/shaders/: bloom_downsample.frag.glsl  bloom_prefilter.frag.glsl  bloom_upsample.frag.glsl  debug.frag.glsl  debug.vert.glsl  depth.frag.glsl  forward.frag.glsl  frag.glsl  fullscreen.vert.glsl  main.frag.glsl  null.frag.glsl  particle.frag.glsl  particle.vert.glsl  simple.frag.glsl  skinned.vert.glsl  ssao.frag.glsl  ssao_blur.frag.glsl  tonemap.frag.glsl  tracer.frag.glsl  tracer.vert.glsl
showcase/source/: camera.c  camera.h  collision.c  collision.h  debug_manager.c  debug_manager.h  directional_light.c  directional_light.h  forward_pipeline.c  forward_pipeline.h  input.h  map.c  map.h  model_manager.c  model_manager.h  particle_manager.c  preferences.c  preferences.h  showcase.c  sound.c  sound.h  texture.h  tracer_manager.c  tracer_manager.h  window.c
showcase/source/enemy/: enemy.c  enemy.h  enemy_state_aim.c  enemy_state_aim.h  enemy_state_die.c  enemy_state_fire.c  enemy_state_walk.c  enemy_state_walk.h
showcase/source/hud/: debug_window.c  debug_window.h  hud.c  hud.h  hud_damage_indicator.c  hud_damage_indicator.h  texture_window.c  texture_window.h
showcase/source/model/: model_manager.c  model_manager.h  model_renderer.c
showcase/source/particle/: particle.c  particle_manager.h  particle_pipeline.h  particle_renderer.c
showcase/source/player/: player.c  player.h  view_model.c  view_model.h
showcase/source/renderer/: model_renderer.c  model_renderer.h  renderer.c  renderer.h
showcase/source/renderer/bloom_pass/: bloom_downsample_pipeline.c  bloom_downsample_pipeline.h  bloom_framebuffer.c  bloom_framebuffer.h  bloom_prefilter_pipeline.c  bloom_prefilter_pipeline.h  bloom_upsample_pipeline.c  bloom_upsample_pipeline.h
showcase/source/renderer/debug_texture_pass/: debug_texture_framebuffer.c  debug_texture_framebuffer.h  frustum_pipeline.c  frustum_pipeline.h  frustum_renderer.c  frustum_renderer.h  shadow_composite_pipeline.c  shadow_composite_pipeline.h
showcase/source/renderer/forward_pass/: depth_pipeline.c  depth_pipeline.h  forward_framebuffer.c  forward_framebuffer.h  main_pipeline.c  main_pipeline.h  particle_pipeline.c  particle_pipeline.h  particle_renderer.c  particle_renderer.h  tracer_pipeline.c  tracer_pipeline.h
showcase/source/renderer/post_pass/: debug_pipeline.c  debug_pipeline.h  debug_renderer.c  (+3 more)
showcase/source/tracer/: tracer_manager.c
util/: CMakeLists.txt  filename.c  shader.c  text.c  texture.c  util.c
util/include/util/: util.h
viewer/: CMakeLists.txt  animation_state.c  animation_state.h  bone_overlay.c  bone_overlay.h  camera.c  camera.h  display_state.h  grid.c  grid.h  gui.c  gui.h  gui_skeleton.c  gui_skeleton.h  input.c  input.h  joint_overlay.c  joint_overlay.h  light.c  light.h  model.c  model.h  model_renderer.c  model_renderer.h  scene_state.h  shader.c  shader.h  skeleton_state.h  texture.c  texture.h  viewer.c  wireframe_overlay.c  wireframe_overlay.h
viewer/gui/: animation_mixer.c  animation_mixer.h  gui.c  gui.h  main_menu.c  main_menu.h  skeleton.c  skeleton.h
viewer/overlay/: skeleton_overlay.c  skeleton_overlay.h  wireframe_overlay.c
viewer/shaders/: grid.frag.glsl  grid.vert.glsl  model.frag.glsl  model.vert.glsl  wireframe.geo.glsl  wireframe.vert.glsl  wireframe_overlay.vert.glsl
viewer/shaders/overlay/: overlay.frag.glsl  skeleton.vert.glsl  skeleton_line.geo.glsl  skeleton_point.geo.glsl  wireframe.geo.glsl  wireframe.vert.glsl
viewer/src/: CMakeLists.txt  Main.cpp
(+11 files in other folders)
